MD Settings: handle zoom as floats to fix ghost zoom level issue

R=dpapad@chromium.org
TBR=rdevlin.cronin@chromium.org
BUG=655742
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2422603003
Cr-Commit-Position: refs/heads/master@{#425569}

Former-commit-id: 0c1d68f185e5651164542cb6dd1c6ec9548ec1b1